# AccessGuard

./: .gitignore  LICENSE  README.md  pyproject.toml
accessguard/: __init__.py  __main__.py  cli.py
accessguard/core/: __init__.py  analyzer.py  config.py  graph.py  models.py  parser.py  rules.py  utils.py
accessguard/output/: __init__.py  formatter.py
examples/sample_app/: main.py  services.py
